...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPhoto">

    <EditText
        android:id="@+id/photo_url_edit_text"
        android:layout_width="329dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="144dp"
        android:ems="10"
        android:hint="@string/photo_url"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/photo_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/photo_submit"
...
